--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,15 +18,17 @@
   scroll-behavior: smooth;
 }
 
+
 @layer components {
   .max-container {
     max-width: 1440px;
     margin: 0 auto;
   }
 
-  .input {
-    @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full;
-  }
+  /* .input {
+    @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-500 pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-500
+ max-sm:rounded-full;
+  } */
 }
 
 @layer utilities {
@@ -59,6 +61,6 @@
   }
 
   .info-text {
-    @apply font-montserrat text-slate-gray text-lg leading-7;
+    @apply font-montserrat text-slate-500 text-lg leading-7;
   }
 }
